System AppRemover: Improvements
- Clean up and add new apps to the whitelist
- Added a rule to the code so that each time the user removes an app the system will automatically reboot. Added also a warning preference so that he knows
- Deleted remnants icons

Signed-off-by: Calin <nilac8991@gmail.com>

--- a/res/values/xosp_strings.xml
+++ b/res/values/xosp_strings.xml
@@ -366,7 +366,7 @@
     <string name="sizer_message_delete">Are you sure you want to delete this app?</string>
     <string name="btn_delete">Delete selected APPs now!</string>
     <string name="delete_progress_title">Deleting</string>
-    <string name="delete_progress">Selected Apps are going to be deleted...</string>
+    <string name="delete_progress">Selected Apps are being deleted...</string>
     <string name="delete_success">Deleted</string>
     <string name="delete_fail">Unable to delete</string>
     <string name="btn_profile">Profile</string>
@@ -376,5 +376,8 @@
     <string name="sizer_message_filefail">Failed to create profile.</string>
     <string name="sizer_message_noselect">Nothing selected.</string>
     <string name="system_app_remover">System App Remover</string>
+    <string name="system_app_remover_warning_title">WARNING</string>
+    <string name="system_app_remover_warning_summary">When you remove one of the system apps even if just one of them, the system will automatically reboot after the operation so make sure you save your stuff</string>
+    <string name="system_app_remover_post_toast_reboot">Rebooting to apply the changes... </string>
 
 </resources>
